fixed contrast on <nav>

--- a/css/styles.css
+++ b/css/styles.css
@@ -43,7 +43,6 @@ header .menu {
 header .menu a{
     color: #fff;
     font-size: 16px;
-    font-weight: 300;
     display: inline-block;
     margin: 40px 20px;
     position: relative;
